for-gitops/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-psg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackendpsg
  template:
    metadata:
      labels:
        app: todobackendpsg
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: image-fetch-healthcheck
          image: FETCH-IMAGE
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/src/image
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 3004
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 3004
        - name: todo-static-healthcheck
          image: TODO-IMAGE
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/src/image
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 3005
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 3005
