for-gitops/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todobackendpsg
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3005
